--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <a class="header-bottom__link" href="#">Двигатели</a>
                         </li>
                         <li class="header-bottom__item">
-                            <a class="header-bottom__link" href="#">Запчасти</a>
+                            <a class="header-bottom__link qwe-qwe" href="#">Запчасти</a>
                         </li>
                     </ul>
                 </div>
