--- a/index.html
+++ b/index.html
@@ -46,33 +46,35 @@
                         </a>
                     </div>
                 </div>
-                <div class="header-bottom">
-                    <ul class="header-bottom__list">
-                        <li class="header-bottom__item">
-                            <a class="header-bottom__link" href="#">Квадроциклы</a>
-                        </li>
-                        <li class="header-bottom__item">
-                            <a class="header-bottom__link" href="#">Катера</a>
-                        </li>
-                        <li class="header-bottom__item">
-                            <a class="header-bottom__link" href="#">Гидроциклы</a>
-                        </li>
-                        <li class="header-bottom__item">
-                            <a class="header-bottom__link" href="#">Лодки</a>
-                        </li>
-                        <li class="header-bottom__item">
-                            <a class="header-bottom__link" href="#">Вездеходы</a>
-                        </li>
-                        <li class="header-bottom__item">
-                            <a class="header-bottom__link" href="#">Снегоходы</a>
-                        </li>
-                        <li class="header-bottom__item">
-                            <a class="header-bottom__link" href="#">Двигатели</a>
-                        </li>
-                        <li class="header-bottom__item">
-                            <a class="header-bottom__link qwe-qwe" href="#">Запчасти</a>
-                        </li>
-                    </ul>
+                <div class="horiz-scr">
+                    <div class="header-bottom">
+                        <ul class="header-bottom__list">
+                            <li class="header-bottom__item">
+                                <a class="header-bottom__link" href="#">Квадроциклы</a>
+                            </li>
+                            <li class="header-bottom__item">
+                                <a class="header-bottom__link" href="#">Катера</a>
+                            </li>
+                            <li class="header-bottom__item">
+                                <a class="header-bottom__link" href="#">Гидроциклы</a>
+                            </li>
+                            <li class="header-bottom__item">
+                                <a class="header-bottom__link" href="#">Лодки</a>
+                            </li>
+                            <li class="header-bottom__item">
+                                <a class="header-bottom__link" href="#">Вездеходы</a>
+                            </li>
+                            <li class="header-bottom__item">
+                                <a class="header-bottom__link" href="#">Снегоходы</a>
+                            </li>
+                            <li class="header-bottom__item">
+                                <a class="header-bottom__link" href="#">Двигатели</a>
+                            </li>
+                            <li class="header-bottom__item">
+                                <a class="header-bottom__link qwe-qwe" href="#">Запчасти</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </header>
