--- a/index.html
+++ b/index.html
@@ -105,14 +105,17 @@
                 </div>
                     <div class="header-bottom">
                         <ul class="header-bottom__list">
-                            <li class="header-bottom__item">
+                            <li class="header-bottom__item item-dop">
                                 <a class="header-bottom__link" href="#">Квадроциклы</a>
+                                <a class="header-bottom__link-dop" href="#">Магазины</a>
                             </li>
-                            <li class="header-bottom__item">
+                            <li class="header-bottom__item item-dop">
                                 <a class="header-bottom__link" href="#">Катера</a>
+                                <a class="header-bottom__link-dop" href="#">Акции</a>
                             </li>
-                            <li class="header-bottom__item">
+                            <li class="header-bottom__item item-dop">
                                 <a class="header-bottom__link" href="#">Гидроциклы</a>
+                                <a class="header-bottom__link-dop" href="#">Доставка и оплата</a>
                             </li>
                             <li class="header-bottom__item">
                                 <a class="header-bottom__link" href="#">Лодки</a>
@@ -199,6 +202,21 @@
                             </p>
                         </div>
                     </div>
+                </div>
+            </section>
+            <section class="search">
+                <div class="search__container">
+                        <ul class="search-button-list">
+                            <li class="search-button-list__search-by-number">
+                                <button>Поиск по номеру</button>
+                            </li>
+                            <li class="search-button-list__search-by-brand">
+                                <button>Поиск по марке</button>
+                            </li>
+                            <li class="search-button-list__search-by-product-name">
+                                <button>Поиск по названию товара</button>
+                            </li>
+                        </ul>
                 </div>
             </section>
         </main>
