--- a/index.html
+++ b/index.html
@@ -205,19 +205,17 @@
                 </div>
             </section>
             <section class="search">
-                <div class="search__container">
                         <ul class="search-button-list">
-                            <li class="search-button-list__search-by-number">
-                                <button>Поиск по номеру</button>
+                            <li class="search-button-item">
+                                <button class="search-button-item__search-by-number">Поиск по номеру</button>
                             </li>
-                            <li class="search-button-list__search-by-brand">
-                                <button>Поиск по марке</button>
+                            <li class="search-button-item">
+                                <button class="search-button-item__search-by-brand">Поиск по марке</button>
                             </li>
-                            <li class="search-button-list__search-by-product-name">
-                                <button>Поиск по названию товара</button>
+                            <li class="search-button-item">
+                                <button class="search-button-item__search-by-product-name">Поиск по названию товара</button>
                             </li>
                         </ul>
-                </div>
             </section>
         </main>
         <footer class="footer">
