--- a/index.html
+++ b/index.html
@@ -205,17 +205,19 @@
                 </div>
             </section>
             <section class="search">
-                        <ul class="search-button-list">
-                            <li class="search-button-item">
-                                <button class="search-button-item__search-by-number">Поиск по номеру</button>
-                            </li>
-                            <li class="search-button-item">
-                                <button class="search-button-item__search-by-brand">Поиск по марке</button>
-                            </li>
-                            <li class="search-button-item">
-                                <button class="search-button-item__search-by-product-name">Поиск по названию товара</button>
-                            </li>
-                        </ul>
+                        <div class="search__container">
+                            <ul class="search-button-list">
+                                <li class="search-button-item">
+                                    <button class="search-button-item__search-by-number">Поиск по номеру</button>
+                                </li>
+                                <li class="search-button-item">
+                                    <button class="search-button-item__search-by-brand">Поиск по марке</button>
+                                </li>
+                                <li class="search-button-item">
+                                    <button class="search-button-item__search-by-product-name">Поиск по названию товара</button>
+                                </li>
+                            </ul>
+                        </div>
             </section>
         </main>
         <footer class="footer">
