--- a/index.html
+++ b/index.html
@@ -206,17 +206,15 @@
             </section>
             <section class="search">
                         <div class="search__container">
-                            <ul class="search-button-list">
-                                <li class="search-button-item">
-                                    <button class="search-button-item__search-by-number" id="myButton">Поиск по номеру</button>
-                                </li>
-                                <li class="search-button-item">
-                                    <button class="search-button-item__search-by-brand" id="myButton">Поиск по марке</button>
-                                </li>
-                                <li class="search-button-item">
-                                    <button class="search-button-item__search-by-product-name" id="myButton">Поиск по названию товара</button>
-                                </li>
-                            </ul>
+                            <div class="search-button-cont">
+                                <button class="btn-1">Поиск по  номеру</button>
+                                <button class="btn-2">Поиск по марке</button>
+                                <button class="btn-3">Поиск по названию товара</button>
+                            </div>
+                            <form class="form-search" action="">
+                                <input class="search-site" type="search" placeholder="Поиск по  номеру">
+                                <button class="btn-search" type="submit">искать</button>
+                            </form>
                         </div>
             </section>
         </main>
