--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
                             <form class="form-search" action="">
                                 <input class="search-site" type="search" placeholder="Поиск по  номеру">
                                 <button class="btn-search" type="submit">искать</button>
+                                <img class="icon-search" src="img/search/search.svg" alt="icon-search">
                             </form>
                         </div>
             </section>
