--- a/index.html
+++ b/index.html
@@ -143,27 +143,27 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
                                 <div class="slide-img">
-                                    <img src="img/hero/слайдер баннер.png" alt="">
+                                    <img src="img/hero/fon-hero.png" alt="">
                                 </div>
                             </div>
                             <div class="swiper-slide">
                                 <div class="slide-img">
-                                    <img src="img/hero/слайдер баннер.png" alt="">
+                                    <img src="img/hero/fon-hero.png" alt="">
                                 </div>
                             </div>
                             <div class="swiper-slide">
                                 <div class="slide-img">
-                                    <img src="img/hero/слайдер баннер.png" alt="">
+                                    <img src="img/hero/fon-hero.png" alt="">
                                 </div>
                             </div>
                             <div class="swiper-slide">
                                 <div class="slide-img">
-                                    <img src="img/hero/слайдер баннер.png" alt="">
+                                    <img src="img/hero/fon-hero.png" alt="">
                                 </div>
                             </div>
                             <div class="swiper-slide">
                                 <div class="slide-img">
-                                    <img src="img/hero/слайдер баннер.png" alt="">
+                                    <img src="img/hero/fon-hero.png" alt="">
                                 </div>
                             </div>
                         </div>
