--- a/index.html
+++ b/index.html
@@ -214,9 +214,66 @@
                             <form class="form-search" action="">
                                 <input class="search-site" type="search" placeholder="Поиск по номеру">
                                 <button class="btn-search" type="submit">искать</button>
-                                <img class="icon-search" src="img/search/search.svg" alt="icon-search">
                             </form>
                         </div>
+            </section>
+            <section class="product">
+                <div class="product__container">
+                    <div class="produc__block-atvs block-product">
+                        <div class="product-block-left">
+                            <h3 class="product__title title-product">Квадроциклы</h3>
+                            <a class="product__more-ats more-product" href="#">Подробее</a>
+                        </div>
+                        <div class="product-block-right">
+                            <img class="product-img-atvs img-product" src="img/product/atvs.svg" alt="atvs">
+                        </div>
+                    </div>
+                    <div class="produc__block-atvs block-product">
+                        <div class="product-block-left">
+                            <h3 class="product__title title-product">Гидроциклы</h3>
+                            <a class="product__more-ats more-product" href="#">Подробее</a>
+                        </div>
+                        <div class="product-block-right">
+                            <img class="product-img-hydro img-product" src="img/product/hydrocycles.svg" alt="atvs">
+                        </div>
+                    </div>
+                    <div class="produc__block-atvs block-product">
+                        <div class="product-block-left">
+                            <h3 class="product__title title-product">Катера</h3>
+                            <a class="product__more-ats more-product" href="#">Подробее</a>
+                        </div>
+                        <div class="product-block-right">
+                            <img class="product-img-boat img-product" src="img/product/boat.svg" alt="atvs">
+                        </div>
+                    </div>
+                    <div class="produc__block-atvs block-product">
+                        <div class="product-block-left">
+                            <h3 class="product__title title-product">Снегоходы</h3>
+                            <a class="product__more-ats more-product" href="#">Подробее</a>
+                        </div>
+                        <div class="product-block-right">
+                            <img class="product-img-snow img-product" src="img/product/snowmobiles.svg" alt="atvs">
+                        </div>
+                    </div>
+                    <div class="produc__block-atvs block-product">
+                        <div class="product-block-left">
+                            <h3 class="product__title title-product">Вездеходы</h3>
+                            <a class="product__more-ats more-product" href="#">Подробее</a>
+                        </div>
+                        <div class="product-block-right">
+                            <img class="product-img-rovers img-product" src="img/product/rovers.svg" alt="atvs">
+                        </div>
+                    </div>
+                    <div class="produc__block-atvs block-product">
+                        <div class="product-block-left">
+                            <h3 class="product__title title-product">Двигатели</h3>
+                            <a class="product__more-ats more-product" href="#">Подробее</a>
+                        </div>
+                        <div class="product-block-right">
+                            <img class="product-img-engin img-product" src="img/product/Engines.svg" alt="atvs">
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
         <footer class="footer">
