--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                             <a class="product__more-ats more-product" href="#">Подробее</a>
                         </div>
                         <div class="product-block-right">
-                            <img class="product-img-atvs img-product" src="img/product/atvs.svg" alt="atvs">
+                            <img class="product-img-atvs img-product" src="img/product/atvs.png" alt="atvs">
                         </div>
                     </div>
                     <div class="produc__block-atvs block-product">
